--- a/.gitignore
+++ b/.gitignore
@@ -144,8 +144,9 @@ test_data3/graph/*
 test_data3/vtk/*
 test_data3/test_data3*
 scratch/*
-
-
+QLD/*
+qld_src_data/*
+*.zip
 
 map2loop/.vscode/launch.json
 map2loop/.vscode/settings.json
