CRS, DTM, map2model, QLD updates
1. CRS explicitly applied to all new shapeffiles
2. DTM download retries 100 times before failing
3. map2model exposed choice of age definition
4. QLD demo datasets added

--- a/.gitignore
+++ b/.gitignore
@@ -143,6 +143,12 @@ test_data3/dtm/*
 test_data3/graph/*
 test_data3/vtk/*
 test_data3/test_data3*
+qld_src_data/tmp/*
+qld_src_data/output/*
+qld_src_data/dtm/*
+qld_src_data/graph/*
+qld_src_data/vtk/*
+qld_src_data/qld_src_data*
 scratch/*
 QLD/*
 SA/*
