--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,17 @@ python=3.7
 rasterio
 geopandas
 networkx
-numpy
-owslib
-descartes
-mplstereonet>=0.6
+cython
+pytz
 pyamg
+python-dateutil
+descartes
+owslib
+ipywidgets
 ipyleaflet
+lavavu
+folium
+mplstereonet>=0.6
+scikit-learn
+scikit-image
+LoopStructural
