bugs and features
1) check and fix  if geology and orientations share important field names
2) remove other duplicate field names before use in notbooks
3) change qLD folder name
4) add notebooks for remaining Australian states and put example zip data online

--- a/.gitignore
+++ b/.gitignore
@@ -143,18 +143,44 @@ test_data3/dtm/*
 test_data3/graph/*
 test_data3/vtk/*
 test_data3/test_data3*
-qld_src_data/tmp/*
-qld_src_data/output/*
-qld_src_data/dtm/*
-qld_src_data/graph/*
-qld_src_data/vtk/*
-qld_src_data/data*
+QLD/tmp*
+QLD/dtm*
+QLD/output*
+QLD/graph*
+QLD/vtk*
+QLD/data*
+NSW/tmp*
+NSW/dtm*
+NSW/output*
+NSW/graph*
+NSW/vtk*
+NSW/data*
+SA/tmp*
+SA/dtm*
+SA/output*
+SA/graph*
+SA/vtk*
+SA/data*
+SA/tmp*
+VIC/tmp*
+VIC/dtm*
+VIC/output*
+VIC/graph*
+VIC/vtk*
+VIC/data*
+NT/tmp*
+NT/dtm*
+NT/output*
+NT/graph*
+NT/vtk*
+NT/data*
+TAS/tmp*
+TAS/dtm*
+TAS/output*
+TAS/graph*
+TAS/vtk*
+TAS/data*
 scratch/*
-QLD/*
-SA/*
-NSW/data/*
-Test/*
-NT/*
-VIC/*
+
 map2loop/.vscode/launch.json
 map2loop/.vscode/settings.json
